--- a/src/common/components/MovieCategory/CategoryList/MovieCard/FullMovieCard/CastInfo/CastInfo.module.css
+++ b/src/common/components/MovieCategory/CategoryList/MovieCard/FullMovieCard/CastInfo/CastInfo.module.css
@@ -32,7 +32,7 @@
   height: 96px;
   border-radius: 50%;
   object-fit: cover;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 20px var(--color-shadow-20);
 }
 
 .name {
