--- a/src/common/components/MovieCategory/CategoryList/CategoryList.module.css
+++ b/src/common/components/MovieCategory/CategoryList/CategoryList.module.css
@@ -1,7 +1,7 @@
 .list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(5, minmax(0, 1fr));
   gap: 16px;
   align-items: start;
-  justify-items: center;
+  justify-items: stretch;
 }
