--- a/src/common/components/MovieCategory/CategoryList/MovieCard/FullMovieCard/MovieInfo/MovieInfo.module.css
+++ b/src/common/components/MovieCategory/CategoryList/MovieCard/FullMovieCard/MovieInfo/MovieInfo.module.css
@@ -37,7 +37,6 @@
   width: 38px;
   height: 38px;
   border-radius: 50%;
-  background: var(--color-status-success);
   color: var(--color-text-primary);
   font-weight: 700;
   font-size: 0.95rem;
@@ -87,6 +86,18 @@
   color: var(--color-text-primary);
   font-size: 0.85rem;
   font-weight: 600;
+}
+
+.ratingGreat {
+  background: var(--color-status-success);
+}
+
+.ratingNormal {
+  background: var(--color-status-warning);
+}
+
+.ratingBad {
+  background: var(--color-status-error);
 }
 
 @media (max-width: 820px) {
