--- a/src/common/components/SortBy/SortBy.module.css
+++ b/src/common/components/SortBy/SortBy.module.css
@@ -27,5 +27,6 @@
 .select:focus {
   outline: none;
   border-color: var(--color-primary);
-  box-shadow: 0 0 0 3px color-mix(in srgb, var(--color-primary), transparent 75%);
+  box-shadow: 0 0 0 3px
+    color-mix(in srgb, var(--color-primary), transparent 75%);
 }
